--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -56,8 +56,141 @@
 		</div>
 	  </nav>
 	{% endblock header %} 
-	
+
 	{% block content %} {% endblock content %}
+
+	{% block footer %}
+	<br>
+<!— Footer —>
+<footer class="page-footer font-small unique-color-dark mt-4">
+    <div style="background-color: #6351ce;">
+      <div class="container">
+  
+        <!— Grid row ->
+        <div class="row py-4 d-flex align-items-center">
+  
+          <!— Grid column —>
+          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+            <h6 class="mb-0">Un lugar para gestionar sus Eventos con mucha faciliadad</h6>
+          </div>
+          <!— Grid column —>
+  
+          <!— Grid column —>
+          <div class="col-md-6 col-lg-7 text-center text-md-right">
+  
+            <!— Facebook —>
+            <a class="fb-ic">
+              <i class="fa fa-facebook white-text mr-4"> </i>
+            </a>
+            <!— Twitter —>
+            <a class="tw-ic">
+              <i class="fa fa-twitter white-text mr-4"> </i>
+            </a>
+            <!— Google +-->
+            <a class="gplus-ic">
+              <i class="fa fa-google-plus white-text mr-4"> </i>
+            </a>
+            <!--Linkedin —>
+            <a class="li-ic">
+              <i class="fa fa-linkedin white-text mr-4"> </i>
+            </a>
+            <!--Instagram-->
+            <a class="ins-ic">
+              <i class="fa fa-instagram white-text"> </i>
+            </a>
+  
+          </div>
+          <!— Grid column —>
+  
+        </div>
+        <!— Grid row-->
+  
+      </div>
+    </div>
+  
+    <!— Footer Links —>
+    <div class="container text-center text-md-left mt-5">
+  
+      <!— Grid row —>
+      <div class="row mt-3">
+  
+        <!— Grid column —>
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+  
+          <!— Content —>
+          <h6 class="text-uppercase font-weight-bold">Gestiones Linkage</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p> Un lugar diseñado para que los sitios de Eventos puedan publicar sus sitios y los Administradores de Eventos puedan inscribir sus Eventos en diferente ssitios y los muestren al Público.</p>
+  
+        </div>
+        <!— Grid column —>  
+  
+        <!— Grid column —>
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+  
+          <!— Links —>
+          <h6 class="text-uppercase font-weight-bold">Productos</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <a href="#!">Eventos</a>
+          </p>
+          <p>
+            <a href="#!">Lugares</a>
+          </p>
+          <p>
+            <a href="#!">Another One</a>
+          </p>
+          <p>
+            <a href="#!">Another Item</a>
+          </p>
+  
+        </div>
+        <!— Grid column —>
+  
+        <!— Grid column —>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+  
+          <!— Links —>
+          <h6 class="text-uppercase font-weight-bold">Links útiles</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <a href="https://gitlab.com/josem.henao">josemhenao</a>
+          </p>
+          <p>
+            <a href="#!">Unéte a nuestro Equipo</a>
+          </p>
+          <p>
+            <a href="#!">Costos y paquetes</a>
+          </p>
+          <p>
+            <a href="#!">Ayuda</a>
+          </p>
+  
+        </div>
+        <!— Grid column —>
+  
+        <!— Grid column —>
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+  
+          <!— Links —>
+          <h6 class="text-uppercase font-weight-bold">Contacto</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <i class="fa fa-home mr-3"></i> Colombia, Antioquia, 054040</p>
+          <p>
+            <i class="fa fa-envelope mr-3"></i> josem.henao@gmail.com</p>
+          <p>
+            <i class="fa fa-phone mr-3"></i> +57 4 564 89 79</p>
+          <p>
+            <i class="fa fa-print mr-3"></i> +57 319 583 17 65</p>
+  
+        </div>
+        <!— Grid column —>
+  
+      </div>
+      <!— Grid row —>
+    </div>
+	{% endblock footer %}
 	
 	{% block scripts %} {% endblock scripts %}
 </body>
