--- a/usuarios/templates/register.html
+++ b/usuarios/templates/register.html
@@ -2,13 +2,70 @@
 {% load static from staticfiles %}
 
 {% block title %}
-	Linkage
+Linkage
 {% endblock title %}
 
 {% block content %}
-	<H1>REGISTER PAGE</H1>
-{% endblock content %}	
+
+<form action="/" method="post">
+    {% csrf_token %}
+
+
+    <div class="container">
+
+        <div class="form-group">
+            <label for="username">Username: </label>
+            {{ form.username }}
+            {{ form.usermane.errors }}
+        </div>
+
+        <div class="form-group">
+            <label for="nombre">Nombre: </label>
+            {{ form.nombre }}
+        </div>
+
+        <div class="form-group">
+            <label for="apellido">Apellido: </label>
+            {{ form.apellido }}
+        </div>
+
+        <div class="form-group">
+            <label for="rol">Rol: </label>
+            {{ form.rol }}
+        </div>
+
+        <div class="form-group">
+            <label for="tipo_identificacion">Tipo Identificación</label>
+            {{ form.tipo_identificacion }}
+        </div>
+
+        <div class="form-group">
+            <label for="identificacion">Identificación</label>
+            {{ form.identificacion }}
+        </div>
+
+        <div class="form-group">
+            <label for="fecha_nacimiento">Fecha de Nacimiento</label>
+            {{ form.fecha_nacimiento }}
+        </div>
+
+        <div class="form-group">
+            <label for="email">Email</label>
+            {{ form.email }}
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password</label>
+            {{ form.password }}
+        </div>
+
+    </div>
+
+    <input type="submit" value="Submit"/>
+</form>
+
+{% endblock content %}
 
 {% block scripts %}
-	
+
 {% endblock scripts %}
