--- a/usuarios/templates/register.html
+++ b/usuarios/templates/register.html
@@ -7,61 +7,16 @@ Linkage
 
 {% block content %}
 
-<form action="/" method="post">
+<form method="post">
     {% csrf_token %}
-
 
     <div class="container">
 
-        <div class="form-group">
-            <label for="username">Username: </label>
-            {{ form.username }}
-            {{ form.usermane.errors }}
-        </div>
+        {{ form.as_p }}
 
-        <div class="form-group">
-            <label for="nombre">Nombre: </label>
-            {{ form.nombre }}
-        </div>
-
-        <div class="form-group">
-            <label for="apellido">Apellido: </label>
-            {{ form.apellido }}
-        </div>
-
-        <div class="form-group">
-            <label for="rol">Rol: </label>
-            {{ form.rol }}
-        </div>
-
-        <div class="form-group">
-            <label for="tipo_identificacion">Tipo Identificación</label>
-            {{ form.tipo_identificacion }}
-        </div>
-
-        <div class="form-group">
-            <label for="identificacion">Identificación</label>
-            {{ form.identificacion }}
-        </div>
-
-        <div class="form-group">
-            <label for="fecha_nacimiento">Fecha de Nacimiento</label>
-            {{ form.fecha_nacimiento }}
-        </div>
-
-        <div class="form-group">
-            <label for="email">Email</label>
-            {{ form.email }}
-        </div>
-
-        <div class="form-group">
-            <label for="password">Password</label>
-            {{ form.password }}
-        </div>
+        <input class="btn btn-outline-primary btn-lg" type="submit" value="Registrarse"/>
 
     </div>
-
-    <input type="submit" value="Submit"/>
 </form>
 
 {% endblock content %}
