Se ha modifocado el modelo Usuarios de tal modo que herede del modelo User: se han desactivado las aplicaciones lugares y eventos; el registro de usuarios se está haciendo correctamente

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -39,28 +39,32 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="eventos">Eventos<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="% url 'eventos' %}">Eventos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="lugares">Lugares</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Usuarios
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{% url 'register' %}">Registrarse</a>
-                    <a class="dropdown-item" href="{% url 'login' %}">Iniciar sesión</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="">Something else here</a>
-                </div>
+                <a class="nav-link" href="% url 'lugares' %}">Lugares</a>
             </li>
         </ul>
+
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="buscar" placeholder="Buscar" aria-label="Buscar">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </form>
+        <div>
+            {% if user.is_authenticated %}
+                <a href="{% url 'register' %}">{{ user.username }}</a>
+                <a>Hola</a>
+            {% else %}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="% url 'register' %}">Registrarse<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="% url 'login' %}">Iniciar Sesión</a>
+                    </li>
+                </ul>
+            {% endif %}
+        </div>
     </div>
 </nav>
 {% endblock header %}
