El registro se está haciendo correctamente; sin embargo no se ha podido solucionar el problema de verificar las contraseñas encriptadas en la BD a la hora de hacer Login

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -50,17 +50,18 @@
             <input class="form-control mr-sm-2" type="buscar" placeholder="Buscar" aria-label="Buscar">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </form>
-        <div>
+
+        <div class="my-2 my-lg-0">
             {% if user.is_authenticated %}
-                <a href="{% url 'register' %}">{{ user.username }}</a>
-                <a>Hola</a>
+                <a>Hola, {{ user.username }}</a>
+                <a href="{% url 'logout' %}">Salir</a>
             {% else %}
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="% url 'register' %}">Registrarse<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'register' %}">Registrarse<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="% url 'login' %}">Iniciar Sesión</a>
+                        <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
                     </li>
                 </ul>
             {% endif %}
