--- a/usuarios/templates/detalle_usuario.html
+++ b/usuarios/templates/detalle_usuario.html
@@ -7,15 +7,7 @@ Linkage
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-
-    {{ form.as_p }}
-
-    <input class="btn btn-outline-primary btn-lg" type="submit" value="Registrarse"/>
-
-    </div>
-</form>
+<h1>Detalle Usuario Page!!</h1>
 
 {% endblock content %}
 
