--- a/usuarios/templates/auth.html
+++ b/usuarios/templates/auth.html
@@ -2,20 +2,13 @@
 {% load static from staticfiles %}
 
 {% block title %}
-Linkage
+Linkage|Auth
 {% endblock title %}
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-
-    {{ form.as_p }}
-
-    <input class="btn btn-outline-primary btn-lg" type="submit" value="Registrarse"/>
-
-    </div>
-</form>
+    <h1>Auth Page!</h1>
+    <a href="{% url 'delete' %}">Eliminar usuario</a>
 
 {% endblock content %}
 
