--- a/usuarios/templates/delete_usuario.html
+++ b/usuarios/templates/delete_usuario.html
@@ -7,14 +7,9 @@ Linkage
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-
-    {{ form.as_p }}
-
-    <input class="btn btn-outline-primary btn-lg" type="submit" value="Registrarse"/>
-
-    </div>
+<form method="post">{% csrf_token %}
+    <p>Are you sure you want to delete "{{ object }}"?</p>
+    <input type="submit" value="Confirm" />
 </form>
 
 {% endblock content %}
