--- a/usuarios/templates/update_usuario.html
+++ b/usuarios/templates/update_usuario.html
@@ -7,14 +7,9 @@ Linkage
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-
+<form method="post">{% csrf_token %}
     {{ form.as_p }}
-
-    <input class="btn btn-outline-primary btn-lg" type="submit" value="Registrarse"/>
-
-    </div>
+    <input type="submit" value="Update" />
 </form>
 
 {% endblock content %}
