--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 
-    <title>{% block title %}Linkage{% endblock title %}</title>
+    <title>{% block title %}{% endblock title %}</title>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -37,12 +37,13 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="% url 'eventos' %}">Eventos<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'eventos' %}">Eventos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="% url 'lugares' %}">Lugares</a>
+                <a class="nav-link" href="{% url 'lugares' %}">Lugares</a>
             </li>
         </ul>
 
@@ -50,21 +51,25 @@
             <input class="form-control mr-sm-2" type="buscar" placeholder="Buscar" aria-label="Buscar">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </form>
-
+        
         <div class="my-2 my-lg-0">
+            <ul class="navbar-nav mr-auto">
             {% if user.is_authenticated %}
-                <a>Hola, {{ user.username }}</a>
-                <a href="{% url 'logout' %}">Salir</a>
+                <li class="nav-item active">
+                    <a class="nav-link">Hola, {{ user.username }}</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'logout' %}">Salir</a>
+                </li>
             {% else %}
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'register' %}">Registrarse<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
-                    </li>
-                </ul>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'register' %}">Registrarse<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
+                </li>
             {% endif %}
+            </ul>
         </div>
     </div>
 </nav>
