--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %} 
 {% load static %}
 
+{% block title %} Linkage | home {% endblock title %}
+
 {% block content %}
 <div class="container" style="background-color : #272727;">
 
