--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %} Usuarios | Login {% endblock title %}
+
 {% block content %}
+<br>
 <form method="POST">
     {% csrf_token %}
 
