--- a/usuarios/templates/register.html
+++ b/usuarios/templates/register.html
@@ -1,4 +1,8 @@
-{% extends "base.html" %} {% load static from staticfiles %} {% block title %} Linkage {% endblock title %} {% block content%}
+{% extends "base.html" %} {% load static from staticfiles %}
+
+{% block title %} Usuarios | Register {% endblock title %}
+
+{% block content%}
 <br>
 <form method="post">
     {% csrf_token %}
