--- a/lugares/templates/registroLugar.html
+++ b/lugares/templates/registroLugar.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
         <div class="container">
             <br>
-            <p>Llena los siguientes campos correctamente</p>
+            <p><i>Llena los siguientes campos correctamente</i></p>
             <br>
             <div class="form-group">
                 <label for="nombre" class="col-md-2">Nombre del Lugar: </label>
