--- a/lugares/templates/lugares.html
+++ b/lugares/templates/lugares.html
@@ -1,52 +1,51 @@
 {% extends "base.html" %}
 
-{% load static %}
+{% load static from staticfiles %}
 
-{% block title %} Linkage|Lugares {% endblock title %}
+{% block title %}
+    Lugares | Listado
+{% endblock title %}
 
 {% block content %}
 
-<div class="card mb-3">
-  <img class="card-img-top" src="{% static 'img/ice.png' %}" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-  </div>
-</div>
+    <div class="container">
+        <ul class="nav">
 
-<div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src="{% static 'img/rostro.png' %}" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <li class="nav-item">
+                <a class="nav-link active" href="{% url 'registrar_lugar' %}">Agregar un lugar</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#">Mis lugares</a>
+            </li>
+
+        </ul>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+
+    <br>
+
+    <div class="container">
+        <div class="card-deck">
+
+            {% for lugar in object_list %}
+                <div class="card">
+                    {% if lugar.img_ppal %}
+                        <img class="card-img-top" src="{{ lugar.img_ppal.url }}">
+                    {% endif %}
+                    <div class="card-body">
+                        <h5 class="card-title">{{ lugar.name }}</h5>
+                        <p class="card-text">
+                            {{ lugar.description }}
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">{{ lugar.city }}</small>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="{% static 'img/trompa.png' %}" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="{% static 'img/ojo.png' %}" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-</div>
+
 {% endblock content %}
 
 {% block scripts %}
