--- a/lugares/templates/registroLugar.html
+++ b/lugares/templates/registroLugar.html
@@ -5,7 +5,7 @@
 {% block title %}Lugares | Registro{% endblock title %}
 
 {% block content %}
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="container">
             <br>
@@ -29,6 +29,11 @@
             <div class="form-group">
                 <label for="city" class="col-md-2">Ciudad: </label>
                 {{ form.city }} {{ form.city.errors }}
+            </div>
+
+            <div class="form-group">
+                <label for="city" class="col-md-2">Categoría: </label>
+                {{ form.category }} {{ form.category.errors }}
             </div>
 
             <div class="form-group">
