Se ha reparado la función de cambio de contraseña en Usuarios; se ha modificado la manera de enviar parametros por url, en especifico se ha modificado el href para ir al perfil de usuario

--- a/lugares/templates/lugares.html
+++ b/lugares/templates/lugares.html
@@ -11,9 +11,11 @@
     <div class="container">
         <ul class="nav">
 
-            <li class="nav-item">
-                <a class="nav-link active" href="{% url 'registrar_lugar' %}">Agregar un lugar</a>
-            </li>
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'registrar_lugar' %}">Agregar un lugar</a>
+                </li>
+            {% endif %}
 
             <li class="nav-item">
                 <a class="nav-link" href="#">Mis lugares</a>
