--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -31,7 +31,7 @@
 <body>
 
 {% block header %}
-    <nav class="navbar navbar-expand-lg navbar-light color_bg-darkblue">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="/">Linkage</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -60,7 +60,10 @@
                     {% if user.is_authenticated %}
                         <li class="nav-item active">
                             <a class="nav-link"
-                               href="/usuarios/{{ user.username }}"><img src="{{ usuario.imagen.url }}" width="20" style="border-radius: 6px;"> {{ user.username }}
+                               href="{% url 'usuario_profile' user.username %}"><img src="{{ usuario.imagen.url }}"
+                                                                                     width="20"
+                                                                                     style="border-radius: 6px;">
+                                {{ user.username }}
                             </a>
                         </li>
                         <li class="nav-item active">
