--- a/usuarios/templates/change_password.html
+++ b/usuarios/templates/change_password.html
@@ -10,30 +10,36 @@
     <form method="post">
         {% csrf_token %}
 
-        <div class="container col-md-4">
+        <div class="container">
             <br>
             <p><i>Llena los siguientes campos</i></p>
             <br>
 
-{#            <div class="form-row">#}
-{#                <label class="col-md-2">Ingresa tu nombre de usuario</label>#}
-{#                {{ form.username }}#}
-{#            </div>#}
-{##}
-{#            <div class="form-row">#}
-{#                <label class="col-md-2">Contraseña actual</label>#}
-{#                {{ form.old_password }}#}
-{#            </div>#}
-{##}
-{#            <div class="form-row">#}
-{#                <label class="col-md-2">Contraseña nueva</label>#}
-{#                {{ form.new_password }}#}
-{#            </div>#}
-{##}
-{#            <div class="form-row">#}
-{#                <label class="col-md-2">Confirma la nueva contraseña</label>#}
-{#                {{ form.conf_password }}#}
-{#            </div>#}
+            <div class="form-group">
+                <label class="col-md-2">Username</label>
+                {{ form.username }}{{ form.username.errors }}
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2">Contraseña actual</label>
+                {{ form.old_password }} {{ form.old_password.errors }}
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2">Contraseña nueva</label>
+                {{ form.new_password }} {{ form.new_password.errors }}
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2">Confirma la nueva contraseña</label>
+                {{ form.conf_password }} {{ form.conf_password.errors }}
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2"></label>
+                <input class="btn btn-outline-primary btn-lg" type="submit" value="Cambiar Password"/>
+            </div>
+
 
         </div>
 
