--- a/usuarios/templates/delete_usuario.html
+++ b/usuarios/templates/delete_usuario.html
@@ -7,8 +7,9 @@ Linkage
 
 {% block content %}
 
-<form method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ object }}"?</p>
+<form method="post">
+    {% csrf_token %}
+    <p>Are you sure you want to delete "{{ usuario.username }}"?</p>
     <input type="submit" value="Confirm" />
 </form>
 
