--- a/usuarios/templates/profile.html
+++ b/usuarios/templates/profile.html
@@ -11,18 +11,20 @@
         <div class="container">
             <br>
             <div class="form-row">
-                <label class="col-md-2"></label>
+                <label class="col-md-2">Username</label>
                 <label>{{ usuario.username }}</label>
             </div>
             <br>
 
-            <p>
-                {{ usuario.profile }}
-            </p>
+            <div class="form-row">
+                <label class="col-md-2"></label>
+                <label><a href="change_image.html"><img src="{{ usuario.imagen.url }}" width="200" class="border-rad_40"></a></label>
+            </div>
+
+            <br>
 
             <div class="form-row">
                 <label class="col-md-2"></label>
-                <img src="{{ usuario.imagen.url }}" width="200" style="border-radius: 6px">
             </div>
 
             <br>
