Se ha habilitado el cambio de imagen para usuarios; se ha cambiado la imagen por defecto de los usuarios

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -161,10 +161,10 @@
                 <h6 class="text-uppercase font-weight-bold">Productos</h6>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>
-                    <a href="#!">Eventos</a>
+                    <a href="{% url 'eventos' %}">Eventos</a>
                 </p>
                 <p>
-                    <a href="#!">Lugares</a>
+                    <a href="{% url 'lugares' %}">Lugares</a>
                 </p>
                 <p>
                     <a href="#!">Another One</a>
@@ -183,7 +183,7 @@
                 <h6 class="text-uppercase font-weight-bold">Links útiles</h6>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>
-                    <a href="https://gitlab.com/josem.henao">josemhenao</a>
+                    <a href="https://gitlab.com/josem.henao">gitlab.com/josem.henao</a>
                 </p>
                 <p>
                     <a href="#!">Unéte a nuestro Equipo</a>
