--- a/usuarios/templates/change_password.html
+++ b/usuarios/templates/change_password.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    Usuarios | Change password
+    Usuarios | Cambiar password
 {% endblock title %}
 
 {% block content %}
