--- a/main/static/css/assets.css
+++ b/main/static/css/assets.css
@@ -1,4 +1,7 @@
 .border-rad_40{
-    border-radius: 60px;
-    border-bottom-left-radius: 20px;
+    border-radius: 40px;
+}
+
+.border-rad_30{
+    border-radius: 10px;
 }
