Se ha agregado una validación al cambio de imagen, de modo que cuando no se elija un archivo de imagen nuevo, deje la imagen que se tenía y no la imagen por defecto; se ha agregado el archivo global_vars que almacena las variables globales de las aplicaciones, por ahora sólo se ha implementado en usuarios

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -62,7 +62,7 @@
                         <li class="nav-item active">
                             <a class="nav-link"
                                href="{% url 'usuario_profile' user.username %}"><img src="{{ user.imagen.url }}"
-                                                                                     width="30"
+                                                                                     height="30"
                                                                                      style="border-radius: 6px;">
                                 {{ user.username }}
                             </a>
