--- a/usuarios/templates/change_profile_image.html
+++ b/usuarios/templates/change_profile_image.html
@@ -22,9 +22,8 @@
 
             <div class="form-group">
                 <label class="col-md-2"></label>
-                <input class="btn btn-outline-primary btn-lg" type="submit" value="Cambiar Password"/>
+                <input class="btn btn-outline-primary btn-lg" type="submit" value="Cambiar Imagen"/>
             </div>
-
 
         </div>
 
