--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -10,22 +10,24 @@
     <title>{% block title %}{% endblock title %}</title>
     {% load static from staticfiles %}
 
-    <script src="{% static 'js/jquery-3.2.1.slim.min.js' %}"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
+    {% block statics %}
+        <script src="{% static 'js/jquery-3.2.1.slim.min.js' %}"
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+                crossorigin="anonymous"></script>
 
-    <script src="{% static 'js/popper.min.js' %}"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
+        <script src="{% static 'js/popper.min.js' %}"
+                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+                crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" crossorigin="anonymous">
-    <script src="{% static 'js/bootstrap.min.js' %}"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" crossorigin="anonymous">
+        <script src="{% static 'js/bootstrap.min.js' %}"
+                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+                crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="{% static 'css/header.css' %}">
-    <link rel="stylesheet" href="{% static 'css/assets.css' %}">
+        <link rel="stylesheet" href="{% static 'css/header.css' %}">
+        <link rel="stylesheet" href="{% static 'css/assets.css' %}">
 
+    {% endblock statics %}
 
 </head>
 
@@ -65,8 +67,8 @@
                         <li class="nav-item active">
                             <a class="nav-link"
                                href="{% url 'usuarios_profile' user.slug %}"><img src="{{ user.imagen.url }}"
-                                                                                     height="30"
-                                                                                     style="border-radius: 6px;">
+                                                                                  height="30"
+                                                                                  style="border-radius: 6px;">
                                 {{ user.username }}
                             </a>
                         </li>
