--- a/lugares/templates/lugares.html
+++ b/lugares/templates/lugares.html
@@ -13,7 +13,7 @@
 
             {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'registrar_lugar' %}">Agregar un lugar</a>
+                    <a class="nav-link active" href="{% url 'lugares_register' %}">Agregar un lugar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Mis lugares</a>
@@ -28,20 +28,24 @@
         <div class="card-group">
 
             {% for lugar in object_list %}
-                <div class="card">
-                    {% if lugar.img_ppal %}
-                        <img class="card-img-top" src="{{ lugar.img_ppal.url }}">
-                    {% endif %}
-                    <div class="card-body">
-                        <h5 class="card-title">{{ lugar.nombre }}</h5>
-                        <p class="card-text">
-                            {{ lugar.descripcion }}
-                        </p>
+                <div class="col-md-4">
+                    <div class="card">
+                        {% if lugar.img_ppal %}
+                            <img class="card-img-top" src="{{ lugar.img_ppal.url }}">
+                        {% endif %}
+                        <div class="card-body">
+                            <h5 class="card-title">{{ lugar.nombre }}</h5>
+                            <p class="card-text">
+                                {{ lugar.descripcion }}
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">{{ lugar.ciudad }}</small>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <small class="text-muted">{{ lugar.cuidad }}</small>
-                    </div>
+                <br>
                 </div>
+
             {% endfor %}
         </div>
     </div>
